--- a/thesiswork.ipynb
+++ b/thesiswork.ipynb
@@ -33,21 +33,16 @@
     "from string import punctuation\n",
     "import nltk\n",
     "from skll.metrics import kappa\n",
-    "from catboost import CatBoostClassifier, CatBoostRegressor\n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.decomposition import TruncatedSVD\n",
     "from sklearn.feature_selection import VarianceThreshold, SelectKBest, f_classif, f_regression\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer, CountVectorizer, TfidfTransformer\n",
-    "from sklearn.model_selection import cross_val_score, GridSearchCV, cross_val_predict, KFold, StratifiedKFold, train_test_split\n",
-    "from sklearn.metrics import classification_report, roc_auc_score, cohen_kappa_score, make_scorer, accuracy_score\n",
-    "from sklearn.preprocessing import StandardScaler,scale\n",
-    "from sklearn.linear_model import LogisticRegression, LinearRegression, ElasticNet, Ridge, Lasso, RidgeClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier,ExtraTreesClassifier, StackingClassifier,GradientBoostingClassifier\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.model_selection import cross_val_score, cross_val_predict, StratifiedKFold\n",
+    "from sklearn.metrics import cohen_kappa_score, make_scorer\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import LogisticRegression, Ridge \n",
+    "from sklearn.ensemble import RandomForestClassifier,ExtraTreesClassifier, StackingClassifier\n",
     "from sklearn.feature_selection import chi2\n",
-    "from sklearn.svm import SVC, LinearSVC\n",
     "from tqdm import tqdm_notebook\n",
-    "from pathlib import Path\n",
     "words_english = set(nltk.corpus.words.words())\n",
     "correct_words_set = set(nltk.corpus.brown.words())\n",
     "lematizator = en_core_web_sm.load()\n",
@@ -314,12 +309,14 @@
     "    #Removing punctuation and counting words\n",
     "    nltk_words_tokinized = []\n",
     "    for i in tqdm_notebook(essays['essay']):\n",
-    "        nltk_words_tokinized += [[word for word in nltk.word_tokenize(i) if word not in punctuation]]\n",
+    "        nltk_words_tokinized += [[word for word in nltk.word_tokenize(i) \n",
+    "                                  if word not in punctuation]]\n",
     "    essays['essay_words'] = nltk_words_tokinized\n",
     "    essays['words_count'] = essays['essay_words'].apply(lambda x:len(x))\n",
     "    essays['unique_words_count'] = essays['essay_words'].apply(lambda x:len(set(x)))\n",
     "\n",
-    "    #Counting punctuation, spelling errors, charachters, words per sentence ratio, average sentence length\n",
+    "    #Counting punctuation, spelling errors, charachters\n",
+    "    #Words per sentence ratio, average sentence length\n",
     "    def words_filter(essays):\n",
     "        punctuation_count = []\n",
     "        misspelled_words_count = []\n",
@@ -381,7 +378,8 @@
     "        pos_list = list(zip(temp_pos_list[0],temp_pos_list[1]))\n",
     "        for i in pos_list:\n",
     "            essays[i[0]][line_number]=i[1]\n",
-    "    essays.drop(columns=[\"''\", '--', ':', '(', ')', '.', ',', '``', '$','essay','essay_sentences'],inplace=True,axis=1)\n",
+    "    essays.drop(columns=[\"''\", '--', ':', '(', ')', '.', ',', '``',\n",
+    "                         '$','essay','essay_sentences'],inplace=True,axis=1)\n",
     "    words_joiner(essays)\n",
     "\n",
     "    #Reducing every word to its grammatical root and counting absolute and unique number of those roots\n",
@@ -829,12 +827,14 @@
    "source": [
     "#Feature importances visualization\n",
     "def feature_importances_visualization(essays,y_train,sel_k_best):\n",
-    "    X = essays[essays.drop(['domain1_score','essay_words','essay_set'],axis=1).columns[(sel_k_best.get_support())]]\n",
+    "    X = essays[essays.drop(['domain1_score','essay_words',\n",
+    "                            'essay_set'],axis=1).columns[(sel_k_best.get_support())]]\n",
     "    y = y_train.astype(np.float64)\n",
     "    forest = ExtraTreesClassifier(n_estimators=250, random_state=26)\n",
     "    forest.fit(X, y)\n",
     "    std = np.std([tree.feature_importances_ for tree in forest.estimators_], axis=0)\n",
-    "    features = pd.DataFrame({'feature_name': X.columns, 'importance': forest.feature_importances_, 'std': std})\n",
+    "    features = pd.DataFrame({'feature_name': X.columns, \n",
+    "                             'importance': forest.feature_importances_, 'std': std})\n",
     "    features.sort_values('importance').plot.barh(x='feature_name', y='importance', xerr='std', legend=False)\n",
     "    plt.title('Gini importances of forest features')\n",
     "    plt.xlabel('Gini-importance')\n",
@@ -856,10 +856,11 @@
     "    essay_words_vectorized = tv.fit_transform(essays['essay_words'])\n",
     "    #Numerical features selection\n",
     "    sel_k_best = SelectKBest(chi2, k=15)\n",
-    "    selected_sel_k_best = sel_k_best.fit_transform(essays.drop(['domain1_score','essay_words','essay_set'],axis=1),y_train)\n",
+    "    selected_sel_k_best = sel_k_best.fit_transform(\n",
+    "        essays.drop(['domain1_score','essay_words','essay_set'],axis=1),y_train)\n",
     "    if feature_importance:\n",
     "        feature_importances_visualization(essays,y_train,sel_k_best)\n",
-    "    #Performng numerical features scaling, stacking with vectorized text data and dimentionality reduction\n",
+    "    #Performng num. features scaling, stacking with vectorized text data and dim. red.\n",
     "    pca = TruncatedSVD(n_components=15,random_state = RANDOM_STATE)\n",
     "    scaleer = StandardScaler(copy=True, with_mean=True, with_std=True)\n",
     "    numerical_scaled = scaleer.fit_transform(selected_sel_k_best)\n",
@@ -886,15 +887,26 @@
    "source": [
     "#All choosen ML models\n",
     "RANDOM_STATE = 47\n",
-    "log_clf = LogisticRegression(penalty='l2',C=5,n_jobs=-1,random_state = RANDOM_STATE,max_iter=5000000)\n",
-    "random_forest_clf = RandomForestClassifier(n_estimators=70,random_state = RANDOM_STATE, n_jobs=-1)\n",
-    "et_clf = ExtraTreesClassifier(n_estimators=70,random_state=RANDOM_STATE, n_jobs=-1)\n",
+    "\n",
+    "log_clf = LogisticRegression(\n",
+    "    penalty='l2',C=5,n_jobs=-1,\n",
+    "    random_state = RANDOM_STATE,max_iter=5000000)\n",
+    "\n",
+    "random_forest_clf = RandomForestClassifier(\n",
+    "    n_estimators=70,random_state = RANDOM_STATE, n_jobs=-1)\n",
+    "\n",
+    "et_clf = ExtraTreesClassifier(\n",
+    "    n_estimators=70,random_state=RANDOM_STATE, n_jobs=-1)\n",
+    "\n",
     "# Stacking\n",
     "estimators = [('logistic', log_clf),\n",
     "              ('ET', et_clf),\n",
     "              ('rf', random_forest_clf)]\n",
-    "model_stacked_clf=StackingClassifier(estimators=estimators, final_estimator=log_clf, \n",
-    "                         stack_method = 'predict_proba', n_jobs=-1,passthrough=False, cv=StratifiedKFold(n_splits=2,random_state = RANDOM_STATE))"
+    "\n",
+    "model_stacked_clf=StackingClassifier(\n",
+    "    estimators=estimators, final_estimator=log_clf, \n",
+    "    stack_method = 'predict_proba', n_jobs=-1, \n",
+    "    passthrough=False, cv=StratifiedKFold(n_splits=2,random_state = RANDOM_STATE))"
    ]
   },
   {
@@ -1081,7 +1093,8 @@
     "        model = model_stacked_clf\n",
     "        scorer = kappa_scorer\n",
     "    X_reduced, y_train = topics_preprocessing(essays,i)\n",
-    "    cv_scores_kappa_scorer = cross_val_score(model, X_reduced, y_train, cv=splits, scoring=scorer, n_jobs=-1, verbose=0)\n",
+    "    cv_scores_kappa_scorer = cross_val_score(\n",
+    "        model, X_reduced, y_train, cv=splits, scoring=scorer, n_jobs=-1, verbose=0)\n",
     "    print('Topic',i,'kappa_score:{}'.format(round(cv_scores_kappa_scorer.mean(),2)))\n",
     "    kappas_means.append(cv_scores_kappa_scorer.mean())\n",
     "    weights.append(len(X_reduced))\n",
@@ -1159,8 +1172,10 @@
    "outputs": [],
    "source": [
     "#preprocessing\n",
-    "persuasive_essays = topics_preprocessing(essays,1,save_to_pkl=True,name_prefix='persuasive',feature_importance=False)\n",
-    "critical_response_essays = topics_preprocessing(essays,5,save_to_pkl=True,name_prefix='critical',feature_importance=False)\n",
+    "persuasive_essays = topics_preprocessing(\n",
+    "    essays,1,save_to_pkl=True,name_prefix='persuasive',feature_importance=False)\n",
+    "critical_response_essays = topics_preprocessing(\n",
+    "    essays,5,save_to_pkl=True,name_prefix='critical',feature_importance=False)\n",
     "#Training the models\n",
     "model_saving_persuasive = model_stacked_clf\n",
     "model_saving_persuasive.fit(persuasive_essays[0], persuasive_essays[1])\n",
