--- a/thesiswork.ipynb
+++ b/thesiswork.ipynb
@@ -20,29 +20,29 @@
    "outputs": [],
    "source": [
     "#importing\n",
+    "import nltk\n",
+    "import spacy\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
     "import pickle\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import spacy\n",
     "import en_core_web_sm\n",
-    "from spacy.lang.en.stop_words import STOP_WORDS\n",
     "from string import punctuation\n",
-    "import nltk\n",
+    "import matplotlib.pyplot as plt\n",
     "from skll.metrics import kappa\n",
+    "from tqdm import tqdm_notebook\n",
+    "from sklearn.feature_selection import chi2\n",
     "from sklearn.decomposition import TruncatedSVD\n",
-    "from sklearn.feature_selection import VarianceThreshold, SelectKBest, f_classif, f_regression\n",
+    "from spacy.lang.en.stop_words import STOP_WORDS\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.model_selection import cross_val_score, cross_val_predict, StratifiedKFold\n",
     "from sklearn.metrics import cohen_kappa_score, make_scorer\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.linear_model import LogisticRegression, Ridge \n",
+    "from sklearn.linear_model import LogisticRegression, Ridge\n",
+    "from sklearn.model_selection import cross_val_score, cross_val_predict, StratifiedKFold\n",
     "from sklearn.ensemble import RandomForestClassifier,ExtraTreesClassifier, StackingClassifier\n",
-    "from sklearn.feature_selection import chi2\n",
-    "from tqdm import tqdm_notebook\n",
+    "from sklearn.feature_selection import VarianceThreshold, SelectKBest, f_classif, f_regression\n",
+    "warnings.filterwarnings('ignore')\n",
     "words_english = set(nltk.corpus.words.words())\n",
     "correct_words_set = set(nltk.corpus.brown.words())\n",
     "lematizator = en_core_web_sm.load()\n",
@@ -827,6 +827,7 @@
    "source": [
     "#Feature importances visualization\n",
     "def feature_importances_visualization(essays,y_train,sel_k_best):\n",
+    "    \n",
     "    X = essays[essays.drop(['domain1_score','essay_words',\n",
     "                            'essay_set'],axis=1).columns[(sel_k_best.get_support())]]\n",
     "    y = y_train.astype(np.float64)\n",
@@ -835,7 +836,8 @@
     "    std = np.std([tree.feature_importances_ for tree in forest.estimators_], axis=0)\n",
     "    features = pd.DataFrame({'feature_name': X.columns, \n",
     "                             'importance': forest.feature_importances_, 'std': std})\n",
-    "    features.sort_values('importance').plot.barh(x='feature_name', y='importance', xerr='std', legend=False)\n",
+    "    features.sort_values('importance').plot.barh(\n",
+    "        x='feature_name', y='importance', xerr='std', legend=False)\n",
     "    plt.title('Gini importances of forest features')\n",
     "    plt.xlabel('Gini-importance')\n",
     "    plt.tight_layout()\n",
@@ -848,18 +850,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def topics_preprocessing(essays_given,topic,save_to_pkl=False,name_prefix='',feature_importance=True):\n",
+    "def topics_preprocessing(essays_given,topic,\n",
+    "                         save_to_pkl=False,name_prefix='',feature_importance=True):\n",
+    "    \n",
     "    essays = essays_given[(essays_given['essay_set']==topic)]\n",
     "    y_train = essays['domain1_score']\n",
+    "    \n",
     "    #Vectorization of text data\n",
     "    tv = TfidfVectorizer(ngram_range=(1, 5), max_features=2000)\n",
     "    essay_words_vectorized = tv.fit_transform(essays['essay_words'])\n",
+    "    \n",
     "    #Numerical features selection\n",
     "    sel_k_best = SelectKBest(chi2, k=15)\n",
     "    selected_sel_k_best = sel_k_best.fit_transform(\n",
     "        essays.drop(['domain1_score','essay_words','essay_set'],axis=1),y_train)\n",
     "    if feature_importance:\n",
     "        feature_importances_visualization(essays,y_train,sel_k_best)\n",
+    "        \n",
     "    #Performng num. features scaling, stacking with vectorized text data and dim. red.\n",
     "    pca = TruncatedSVD(n_components=15,random_state = RANDOM_STATE)\n",
     "    scaleer = StandardScaler(copy=True, with_mean=True, with_std=True)\n",
@@ -1176,6 +1183,7 @@
     "    essays,1,save_to_pkl=True,name_prefix='persuasive',feature_importance=False)\n",
     "critical_response_essays = topics_preprocessing(\n",
     "    essays,5,save_to_pkl=True,name_prefix='critical',feature_importance=False)\n",
+    "\n",
     "#Training the models\n",
     "model_saving_persuasive = model_stacked_clf\n",
     "model_saving_persuasive.fit(persuasive_essays[0], persuasive_essays[1])\n",
